
4.0.3 -> 4.0.4:
	- solaris: translate i86pc to i386 (#57182).
	- fix: %GNUconfigure breaks with single quotes (#57264).
	- fix: typo in find-requires.
	- tru64 compiler message cleanup.
	- add buildarch lines for hppa (#57728).
	- sparc: make dbenv per-rpmdb, not per-dbi.
	- handle lazy db open's in chroot with absolute path, not prefix strip.
	- Depends should use CDB if configured.

4.0.2 -> 4.0.3:
	- update per-interpreter dependency scripts, add sql/tcl (#20295).
	- fix: rpmvercmp("1.a", "1.") returned -1, not +1 (#21392).
	- add cpuid asm voodoo to detect athlon processors.
	- add %exclude support (i.e. "everything but") to %files.
	  (Michael (Micksa) Slade" <micksa@knobbits.org>)
	- add --with/--without popt glue for conditional builds(Tomasz Kloczko).
	- python: strip header regions during unload.
	- add -g to optflags in per-platform config.
	- permit confgure/compile with db3-3.2.9.
	- permit manifest files as args to query/verify/install modes.
	- fix: parameterized macro segfault (Jakub Bogusz <qboosh@pld.org.pl>)
	- fix: i18n tags in rpm-2.5.x had wrong offset/length (#33478).
	- fix: AIX has sizeof(uint_16) != sizeof(mode_t) verify cast needed.
	- fix: zero length hard links unpacked incorrectly (#34211).
	- fix: --relocate missing trailing slash (#28874,#25876).
	- fix: --excludedoc shouldn't create empty doc dir (#14531).
	- fix: %_netsharedpath needs to look at basenames (#26561).
	- fix: --excludepath was broken (#24434).
	- fix: s390 (and ppc?) could return CPIOERR_BAD_HEADER (#28645).
	- fix: Fwrite's are optimized out by aggressive compiler(irix) (#34711).
	- portability: vsnprintf/snprintf wrappers for those without (#34657).
	- more info provided by rpmdepOrder() debugging messages.
	- merge (compatible) changes from top-of-stack into rpmlib.h.
	- cpio mappings carry dirname/basename, not absolute path.
	- fix: check waitpid return code.
	- remove support for v1 src rpm's.
	- re-position callbacks with ts/fi in cpio payload layer.